--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -3,12 +3,24 @@
 </head>
 
 <body>
-  {{> hello}}
+  {{> header}}
+  {{> map}}
+  {{> footer}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="header">
+</template>
+
+<template name="map">
   <div id='map'></div>
+</template>
+
+
+<template name="footer">
+<div id="bottomCurtain">
+	<button id="hotbutton"></button>
+	<footer>
+		Made by The Flying Walruses
+	</footer>
+</div>
 </template>
