--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -18,7 +18,7 @@
 
 <template name="footer">
 <div id="bottomCurtain">
-	<button id="hotbutton"></button>
+	<button id="hotbutton">HDT</button>
 	<footer>
 		Made by The Flying Walruses
 	</footer>
