--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -18,7 +18,7 @@
 
 <template name="footer">
 <div id="bottomCurtain">
-	<button id="hotbutton">HOT</button>
+	<button id="hotbutton" onclick="Maps.addCurrentLocation('Wassup')">HOT</button>
 	<footer>
 		Made by The Flying Walruses
 	</footer>
