Work on implmenting tags

--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -19,6 +19,9 @@
 <template name="footer">
 <div id="bottomCurtain">
 	<button id="hotbutton" onclick="Maps.addCurrentLocation('Wassup')">HOT</button>
+    <label for="tags">#</label>
+    <input id="tags" type="text">
+    <button id="submit" onclick="Maps.addTags()"></button>
 	<footer>
 		Made by The Flying Walruses
 	</footer>
