More work on tags

--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -21,7 +21,7 @@
 	<button id="hotbutton" onclick="Maps.addCurrentLocation('Wassup')">HOT</button>
     <label for="tags">#</label>
     <input id="tags" type="text">
-    <button id="submit" onclick="Maps.addTags()"></button>
+    <button id="submit" onclick="Maps.addTag('test')"></button>
 	<footer>
 		Made by The Flying Walruses
 	</footer>
