--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -19,10 +19,12 @@
 <template name="footer">
 <div id="bottomCurtain">
 	<button id="hotbutton">HOT</button>
-  <div id="tags-group">
+  <div id="tag-entry">
     <label for="tags">#</label>
     <input id="tags" type="text">
   </div>
+  <ul id="tag-list">
+  </ul>
 	<footer>
 		Made by The Flying Walruses
 	</footer>
