--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -20,7 +20,7 @@
 
 
 <template name="footer">
-<div id="bottomCurtain">
+<div id="bottomCurtain" class="down">
 	<a id="hotbutton"></a>
 	<div id="tagwrapper"><input type="text" id="tagfield" placeholder="describe the hotspot"></div>
   	<ul id="tag-list">
