--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -18,13 +18,14 @@
   <div id='map'></div>
 </template>
 
-
 <template name="footer">
 <div id="bottomCurtain">
 	<a id="hotbutton"></a>
-	<div id="tagwrapper"><input type="text" id="tagfield" placeholder="describe the hotspot"></div>
-  	<ul id="tag-list">
-  	</ul>
+	<div id="tagwrapper">
+    <input type="text" id="tagfield" placeholder="describe the hotspot">
+    <span id="copytext"></span>
+    <ul id="tag-list">
+    </ul>
 	<footer>
 		A Flying Walrus Project
 	</footer>
