--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -21,7 +21,7 @@
 </template>
 
 <template name="footer">
-<div id="bottomCurtain" class="down">
+<div id="bottomCurtain" class="down">i
 	<a id="hotbutton"></a>
 	<div id="tagwrapper">
     <input type="text" id="tagfield" placeholder="describe the hotspot">
@@ -29,7 +29,7 @@
     <ul id="tag-list">
     </ul>
 	<footer>
-		A Flying Walrus Project
+		<span>A Flying Walrus Project</span>
 	</footer>
 </div>
 </template>
