--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -21,7 +21,7 @@
 </template>
 
 <template name="footer">
-<div id="bottomCurtain" class="down">i
+<div id="bottomCurtain" class="down">
 	<a id="hotbutton"></a>
 	<div id="tagwrapper">
     <input type="text" id="tagfield" placeholder="describe the hotspot">
