--- a/client/HotSpot.html
+++ b/client/HotSpot.html
@@ -24,7 +24,7 @@
 <div id="bottomCurtain" class="down">
 	<a id="hotbutton"></a>
 	<div id="tagwrapper">
-    <input type="text" id="tagfield" placeholder="describe the hotspot">
+    <input type="text" id="tagfield" placeholder="tag the hotspot!">
     <span id="copytext"></span>
     <ul id="tag-list">
     </ul>
